compile for 3 gpu architectures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,14 +184,20 @@ if(NOT ARB_GPU_MODEL MATCHES "none")
         set(cuda_arch sm_37)
         set(arb_cuda_arch 370)
     elseif(ARB_GPU_MODEL MATCHES "P100")
-        set(cuda_arch sm_60)
+        set(cuda_code_0 sm_35)
+        set(cuda_arch_0 compute_30)
+        set(cuda_code_1 sm_37)
+        set(cuda_arch_1 compute_30)
+        set(cuda_code_2 sm_60)
+        set(cuda_arch_2 compute_60)
         set(arb_cuda_arch 600)
     else()
         message(FATAL_ERROR "-- GPU architecture '${ARB_GPU_MODEL}' not supported. Use one of {none, K20, K80, P100}")
     endif()
 
-    target_compile_options(arbor-private-deps INTERFACE
-        $<$<COMPILE_LANGUAGE:CUDA>:-arch=${cuda_arch}>)
+    add_compile_options($<$<COMPILE_LANGUAGE:CUDA>:-gencode=arch=${cuda_arch_0},code=${cuda_code_0}>)
+    add_compile_options($<$<COMPILE_LANGUAGE:CUDA>:-gencode=arch=${cuda_arch_1},code=${cuda_code_1}>)
+    add_compile_options($<$<COMPILE_LANGUAGE:CUDA>:-gencode=arch=${cuda_arch_2},code=${cuda_code_2}>)
     target_compile_definitions(arbor-private-deps INTERFACE ARB_CUDA_ARCH=${arb_cuda_arch})
 endif()
 
