--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,20 +177,18 @@ if(NOT ARB_GPU_MODEL MATCHES "none")
         "$<$<COMPILE_LANGUAGE:CUDA>:-Xcudafe=--diag_suppress=unsigned_compare_with_zero>")
     target_compile_definitions(arbor-private-deps INTERFACE ARB_HAVE_GPU)
 
-    if(ARB_GPU_MODEL MATCHES "K20")
-        set(cuda_arch sm_35)
-        set(arb_cuda_arch 350)
-    elseif(ARB_GPU_MODEL MATCHES "K80")
-        set(cuda_arch sm_37)
-        set(arb_cuda_arch 370)
-    elseif(ARB_GPU_MODEL MATCHES "P100")
+    if(ARB_GPU_MODEL MATCHES "K20" OR "K80" OR "P100")
         set(cuda_code_0 sm_35)
-        set(cuda_arch_0 compute_30)
+        set(cuda_arch_0 compute_35)
         set(cuda_code_1 sm_37)
-        set(cuda_arch_1 compute_30)
+        set(cuda_arch_1 compute_37)
         set(cuda_code_2 sm_60)
         set(cuda_arch_2 compute_60)
-        set(arb_cuda_arch 600)
+
+        if (ARB_GPU_MODEL MATCHES "P100")
+            set(arb_cuda_arch 600)
+        endif()
+
     else()
         message(FATAL_ERROR "-- GPU architecture '${ARB_GPU_MODEL}' not supported. Use one of {none, K20, K80, P100}")
     endif()
