--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -106,5 +106,6 @@ endif()
 add_executable(unit ${unit_sources})
 target_compile_options(unit PRIVATE ${CXXOPT_ARCH})
 target_compile_definitions(unit PRIVATE "-DDATADIR=\"${CMAKE_CURRENT_SOURCE_DIR}/swc\"")
+target_compile_definitions(unit PRIVATE ARB_HAVE_GPU)
 target_link_libraries(unit PRIVATE gtest arbor arbor-private-headers arbor-aux)
 
