new districbuted_context: dry_run_context and corresponding unit test; new recipe: symmetric_recipe for use in dry_run_context

--- a/example/miniapp/CMakeLists.txt
+++ b/example/miniapp/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(miniapp
     miniapp.cpp
     io.cpp
     miniapp_recipes.cpp
+    miniapp_symmetric_recipe.cpp
     morphology_pool.cpp
     trace.cpp
 )
