return miniapp to original configuration

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(miniapp)
+add_subdirectory(dryrun)
 add_subdirectory(generators)
 add_subdirectory(brunel)
 add_subdirectory(bench)
