--- a/example/dryrun/CMakeLists.txt
+++ b/example/dryrun/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(dryrun dryrun.cpp)
 
-target_link_libraries(dryrun PRIVATE arbor arbor-aux ext-tclap ext-json)
+target_link_libraries(dryrun PRIVATE arbor arbor-aux ext-json)
