propagate exception through threading backend to wait() function in task_group; unit test

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -103,6 +103,7 @@ set(unit_sources
     test_swcio.cpp
     test_synapses.cpp
     test_thread.cpp
+    test_threading_exceptions.cpp
     test_tree.cpp
     test_transform.cpp
     test_uninitialized.cpp
