basic mpi support

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(pyarb MODULE
     event_generator.cpp
     domain_decomposition.cpp
     identifiers.cpp
+    mpi.cpp
     profiler.cpp
     pyarb.cpp
     recipe.cpp
