Make arbor more Windows-development friendly.
* Rename `aux` subdirectories to `ancillary`.
* Rename `aux` namespace to `anc` to match.
* Rename `arbor-aux` target to `arbor-anc`.
* Remove symbolic link for `scripts/profstats`; just put the python file there directly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,10 +114,10 @@ add_library(arbor-public-deps INTERFACE)
 
 add_subdirectory(ext)
 
-# Auxilary/helper utiliies in `aux` are common across test executables
-# and examples. Creates interface library `arbor-aux`.
+# Ancillary utiliies in `ancillary` are common across test executables
+# and examples. Creates interface library `arbor-anc`.
 
-add_subdirectory(aux)
+add_subdirectory(ancillary)
 
 # Target microarchitecture for building arbor libraries, tests and examples
 #---------------------------------------------------------------------------
