--- a/example/bench/CMakeLists.txt
+++ b/example/bench/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(bench bench.cpp recipe.cpp parameters.cpp)
 
-target_link_libraries(bench PRIVATE arbor arbor-aux ext-tclap ext-json)
+target_link_libraries(bench PRIVATE arbor arbor-anc ext-tclap ext-json)
