--- a/example/brunel/CMakeLists.txt
+++ b/example/brunel/CMakeLists.txt
@@ -2,4 +2,4 @@ add_executable(brunel-miniapp
     brunel_miniapp.cpp
     io.cpp)
 
-target_link_libraries(brunel-miniapp PRIVATE arbor arbor-aux ext-tclap)
+target_link_libraries(brunel-miniapp PRIVATE arbor arbor-anc ext-tclap)
