--- a/example/generators/CMakeLists.txt
+++ b/example/generators/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(event-gen event_gen.cpp)
 
-target_link_libraries(event-gen PRIVATE arbor arbor-aux ext-json)
+target_link_libraries(event-gen PRIVATE arbor arbor-anc ext-json)
