--- a/example/ring/CMakeLists.txt
+++ b/example/ring/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(ring ring.cpp)
 
-target_link_libraries(ring PRIVATE arbor arbor-aux ext-tclap ext-json)
+target_link_libraries(ring PRIVATE arbor arbor-anc ext-tclap ext-json)
