--- a/example/risotto/CMakeLists.txt
+++ b/example/risotto/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(risotto risotto.cpp)
 
-target_link_libraries(risotto PRIVATE arbor arbor-aux ext-tclap ext-json)
+target_link_libraries(risotto PRIVATE arbor arbor-anc ext-tclap ext-json)
