--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ matrix:
 ########################## OS X #########################
 ## test gcc6 - single node/rank with threading backend ##
     - os: osx
-      osx_image: xcode9
+      osx_image: xcode9.2
       env:
         - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
         - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
@@ -14,30 +14,15 @@ matrix:
 
 ## test gcc6 - mpi with threading backend ##
     - os: osx
-      osx_image: xcode9
+      osx_image: xcode9.2
       env:
         - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
         - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
       compiler: gcc-6
 
 ## test clang - single node/rank with threading backend ##
-    - os: osx
-      osx_image: xcode9.4
-      env:
-        - MATRIX_EVAL="CC=clang && CXX=clang++"
-        - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
-      compiler: clang
-
-## test clang - single node/rank with threading backend ##
     - os: osx 
-      osx_image: xcode9.3
-      env:
-        - MATRIX_EVAL="CC=clang && CXX=clang++"
-        - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
-      compiler: clang
-
-## test clang - single node/rank with threading backend ##
-    - os: osx 
+      # xcode9/9.1 broken, 9.2 still uses Apple LLVM version 9.0.0 (clang-900.0.39.2)
       osx_image: xcode9.2
       env:
         - MATRIX_EVAL="CC=clang && CXX=clang++"
@@ -45,17 +30,9 @@ matrix:
       compiler: clang
 
 
-## test clang - single node/rank with threading backend ##
-    - os: osx 
-      osx_image: xcode9.1
-      env:
-        - MATRIX_EVAL="CC=clang && CXX=clang++"
-        - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
-      compiler: clang
-
 ## test clang - mpi with threading backend ##
     - os: osx
-      osx_image: xcode9.4
+      osx_image: xcode9.2
       env:
         - MATRIX_EVAL="CC=clang && CXX=clang++"
         - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
