--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-##### Testing minimal compiler requirements #####
-# GCC          6.1.0	 
-# Clang        4.0	
-# Apple Clang  9	 
-#################################################
+######## Testing minimal compiler requirements ########
+# GCC          6.1.0        here: 6.4.0	 
+# Clang        4.0	    here: 3.8,3.9 not compiling
+# Apple Clang  9	    here: clang-900.0.39.2
+#######################################################
 
 language: cpp
 sudo: false
@@ -12,7 +12,7 @@ matrix:
 ########################## OS X #########################
 ## test gcc6 - single node/rank with threading backend ##
     - os: osx
-      osx_image: xcode9.2
+      osx_image: xcode8
       env:
         - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
         - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
@@ -20,7 +20,7 @@ matrix:
 
 ## test gcc6 - mpi with threading backend ##
     - os: osx
-      osx_image: xcode9.2
+      osx_image: xcode10
       env:
         - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
         - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
@@ -38,6 +38,7 @@ matrix:
 
 ## test clang9 - mpi with threading backend ##
     - os: osx
+      # xcode9/9.1 broken, 9.2 still uses Apple LLVM version 9.0.0 (clang-900.0.39.2)
       osx_image: xcode9.2
       env:
         - MATRIX_EVAL="CC=clang && CXX=clang++"
@@ -53,13 +54,13 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-6.1
+            - g++-6
             - openmpi-bin
             - libopenmpi-dev
       env:
-        - MATRIX_EVAL="CC=gcc-6.1 && CXX=g++-6.1"
+        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
         - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
-      compiler: gcc-6.1
+      compiler: gcc-6
 
 ## test gcc6 - mpi with threading backend ##
     - os: linux
@@ -87,67 +88,12 @@ matrix:
             - llvm-toolchain-precise-3.8
           packages:
             - clang-3.8
-            - g++-6
             - openmpi-bin
             - libopenmpi-dev
       env:
         - MATRIX_EVAL="CC=clang-3.8 && CXX=clang++-3.8"
         - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
       compiler: clang-3.8
-
-## test clang3.8 - mpi with threading backend ##
-    - os: linux
-      dist: trusty
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.8
-          packages:
-            - clang-3.8
-            - g++-6
-            - openmpi-bin
-            - libopenmpi-dev
-      env:
-        - MATRIX_EVAL="CC=clang-3.8 && CXX=clang++-3.8"
-        - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
-      compiler: clang-3.8
-
-## test clang3.9 - single node/rank with threading backend ##
-    - os: linux
-      dist: trusty
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.9
-          packages:
-            - clang-3.9
-            - g++-6
-            - openmpi-bin
-            - libopenmpi-dev
-      env:
-        - MATRIX_EVAL="CC=clang-3.9 && CXX=clang++-3.9"
-        - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
-      compiler: clang-3.9
-
-## test clang3.9 - mpi with threading backend ##
-    - os: linux
-      dist: trusty
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.9
-          packages:
-            - clang-3.9
-            - g++-6
-            - openmpi-bin
-            - libopenmpi-dev
-      env:
-        - MATRIX_EVAL="CC=clang-3.9 && CXX=clang++-3.9"
-        - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
-      compiler: clang-3.9
 
 ## test clang4 - single node/rank with threading backend ##
     - os: linux
