--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ######## Testing minimal compiler requirements ########
-# GCC          6.1.0        here: 6.4.0
-# Clang        4.0          here: 3.8,3.9 not compiling
-# Apple Clang  9            here: clang-900.0.39.2
+# GCC          6.4.0
+# Clang        4.0
+# Apple Clang  900.0.39.2
 #######################################################
 
 language: cpp
@@ -11,108 +11,114 @@ matrix:
   include:
 ########################## OS X #########################
 ## test gcc6 - single node/rank with threading backend ##
-    - os: osx
-      osx_image: xcode9.2
-      env:
-        - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
-        - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
-      compiler: gcc-6
+  - name: "osx, gcc, serial"
+    os: osx
+    osx_image: xcode9.2
+    env:
+      - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
+      - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
+    compiler: gcc-6
 
 ## test gcc6 - mpi with threading backend ##
-    - os: osx
-      osx_image: xcode9.2
-      env:
-        - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
-        - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
-      compiler: gcc-6
+  - name: "osx, gcc, mpi"
+    os: osx
+    osx_image: xcode9.2
+    env:
+      - MATRIX_EVAL="brew install gcc@6 && brew link --force --overwrite gcc@6 && CC=gcc-6 && CXX=g++-6"
+      - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
+    compiler: gcc-6
 
 ## test clang9 - single node/rank with threading backend ##
-    - os: osx
-      # xcode9/9.1 broken, 9.2 still uses Apple LLVM version 9.0.0 (clang-900.0.39.2)
-      osx_image: xcode9.2
-      env:
-        - MATRIX_EVAL="CC=clang && CXX=clang++"
-        - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
-      compiler: clang
+  - name: "osx, apple clang, serial"
+    os: osx
+    osx_image: xcode9.2
+    env:
+      - MATRIX_EVAL="CC=clang && CXX=clang++"
+      - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
+    compiler: clang
 
 
 ## test clang9 - mpi with threading backend ##
-    - os: osx
-      # xcode9/9.1 broken, 9.2 still uses Apple LLVM version 9.0.0 (clang-900.0.39.2)
-      osx_image: xcode9.2
-      env:
-        - MATRIX_EVAL="CC=clang && CXX=clang++"
-        - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
-      compiler: clang
+  - name: "osx, apple clang, mpi"
+    os: osx
+    osx_image: xcode9.2
+    env:
+      - MATRIX_EVAL="CC=clang && CXX=clang++"
+      - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
+    compiler: clang
 
 ######################### LINUX #########################
 ## test gcc6 - single node/rank with threading backend ##
-    - os: linux
-      dist: trusty
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-6
-            - openmpi-bin
-            - libopenmpi-dev
-      env:
-        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-        - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
-      compiler: gcc-6
+  - name: "linux, gcc, serial"
+    os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+        packages:
+          - g++-6
+          - openmpi-bin
+          - libopenmpi-dev
+    env:
+      - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+      - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
+    compiler: gcc-6
 
 ## test gcc6 - mpi with threading backend ##
-    - os: linux
-      dist: trusty
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-6
-            - openmpi-bin
-            - libopenmpi-dev
-      env:
-        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-        - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
-      compiler: gcc-6
+  - name: "linux, gcc, mpi"
+    os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+        packages:
+          - g++-6
+          - openmpi-bin
+          - libopenmpi-dev
+    env:
+      - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+      - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
+    compiler: gcc-6
 
 ## test clang4 - single node/rank with threading backend ##
-    - os: linux
-      dist: trusty
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-4.0
-          packages:
-            - clang-4.0
-            - g++-6
-            - openmpi-bin
-            - libopenmpi-dev
-      env:
-        - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
-        - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
-      compiler: clang-4.0
+  - name: "linux, llvm clang, serial"
+    os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-4.0
+        packages:
+          - clang-4.0
+          - g++-6
+          - openmpi-bin
+          - libopenmpi-dev
+    env:
+      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
+      - BUILD_NAME=cthread WITH_DISTRIBUTED=serial
+    compiler: clang-4.0
 
 ## test clang4 - mpi with threading backend ##
-    - os: linux
-      dist: trusty
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-4.0
-          packages:
-            - clang-4.0
-            - g++-6
-            - openmpi-bin
-            - libopenmpi-dev
-      env:
-        - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
-        - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
-      compiler: clang-4.0
+  - name: "linux, llvm clang, mpi"
+    os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-4.0
+        packages:
+          - clang-4.0
+          - g++-6
+          - openmpi-bin
+          - libopenmpi-dev
+    env:
+      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
+      - BUILD_NAME=mpi WITH_DISTRIBUTED=mpi
+    compiler: clang-4.0
 
 before_script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export HOMEBREW_NO_AUTO_UPDATE=1; brew cask uninstall --force oclint; fi
