--- a/example/brunel/CMakeLists.txt
+++ b/example/brunel/CMakeLists.txt
@@ -1,5 +1,6 @@
-add_executable(brunel-miniapp
+add_executable(brunel-miniapp EXCLUDE_FROM_ALL
     brunel_miniapp.cpp
     io.cpp)
+add_dependencies(examples brunel-miniapp)
 
 target_link_libraries(brunel-miniapp PRIVATE arbor arbor-aux ext-tclap)
