--- a/example/generators/CMakeLists.txt
+++ b/example/generators/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_executable(event-gen event_gen.cpp)
+add_executable(event-gen EXCLUDE_FROM_ALL event_gen.cpp)
+add_dependencies(examples event-gen)
 
 target_link_libraries(event-gen PRIVATE arbor arbor-aux ext-json)
