--- a/example/miniapp/CMakeLists.txt
+++ b/example/miniapp/CMakeLists.txt
@@ -1,9 +1,10 @@
-add_executable(miniapp
+add_executable(miniapp EXCLUDE_FROM_ALL
     miniapp.cpp
     io.cpp
     miniapp_recipes.cpp
     morphology_pool.cpp
     trace.cpp
 )
+add_dependencies(examples miniapp)
 
 target_link_libraries(miniapp PRIVATE arbor arbor-aux ext-tclap ext-json)
