--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,3 +1,7 @@
+# Convenience target that builds all examples.
+# Example executable targets should be added to the 'examples' target as dependencies.
+add_custom_target(examples DEPENDS)
+
 add_subdirectory(miniapp)
 add_subdirectory(dryrun)
 add_subdirectory(generators)
