--- a/example/bench/CMakeLists.txt
+++ b/example/bench/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_executable(bench bench.cpp recipe.cpp parameters.cpp)
+add_executable(bench EXCLUDE_FROM_ALL bench.cpp recipe.cpp parameters.cpp)
+add_dependencies(examples bench)
 
 target_link_libraries(bench PRIVATE arbor arbor-aux ext-tclap ext-json)
