--- a/example/dryrun/CMakeLists.txt
+++ b/example/dryrun/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_executable(dryrun dryrun.cpp)
+add_executable(dryrun EXCLUDE_FROM_ALL dryrun.cpp)
+add_dependencies(examples dryrun)
 
 target_link_libraries(dryrun PRIVATE arbor arbor-aux ext-json)
