--- a/example/ring/CMakeLists.txt
+++ b/example/ring/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_executable(ring ring.cpp)
+add_executable(ring EXCLUDE_FROM_ALL ring.cpp)
+add_dependencies(examples ring)
 
 target_link_libraries(ring PRIVATE arbor arbor-aux ext-tclap ext-json)
