--- a/test/unit-distributed/CMakeLists.txt
+++ b/test/unit-distributed/CMakeLists.txt
@@ -8,13 +8,17 @@ set(unit-distributed_sources
     test.cpp
 )
 
-add_executable(unit-local ${unit-distributed_sources})
+add_executable(unit-local EXCLUDE_FROM_ALL ${unit-distributed_sources})
+add_dependencies(tests unit-local)
+
 target_compile_options(unit-local PRIVATE ${ARB_CXXOPT_ARCH})
 target_compile_definitions(unit-local PRIVATE TEST_LOCAL)
 target_link_libraries(unit-local PRIVATE gtest arbor arbor-aux arbor-private-headers)
 
 if(ARB_WITH_MPI)
-    add_executable(unit-mpi ${unit-distributed_sources})
+    add_executable(unit-mpi EXCLUDE_FROM_ALL ${unit-distributed_sources})
+    add_dependencies(tests unit-mpi)
+
     target_compile_options(unit-mpi PRIVATE ${ARB_CXXOPT_ARCH})
     target_compile_definitions(unit-mpi PRIVATE TEST_MPI)
     target_link_libraries(unit-mpi PRIVATE gtest arbor arbor-aux arbor-private-headers)
