--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # 3.8 requirement for CUDA language support.
 cmake_minimum_required(VERSION 3.8)
 
-project(arbor VERSION 0.1)
+project(arbor VERSION 0.1.1-dev)
 enable_language(CXX)
 
 #----------------------------------------------------------
